# AI_project

./: .gitignore  README.md  center.csv  crawl.py  db_uploader.py  pyproject.toml  requirements.txt
backend/: db_uploader2.py  learning_video.csv  pyproject.toml
backend/apps/ai/: admin.py  models.py
backend/apps/core/: models.py  utils.py
backend/apps/map/: serializers.py
backend/apps/map/migrations/: 0001_initial.py
backend/apps/predict/: admin.py  apps.py  models.py  predlabel.py  serializers.py  urls.py  utils.py  video.py  views.py
backend/apps/predict/migrations/: 0001_initial.py  0002_alter_recordvideo_user_id.py
backend/apps/quiz/: models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/quiz/migrations/: 0001_initial.py  0002_quizquestion_video_id.py  0003_quizdescription_korean_name.py
backend/apps/signcenter/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/user/: models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_user_table.py  0003_remove_user_address.py  0005_auto_20220301_1448.py  (+2 more)
backend/apps/video/: admin.py  models.py  serializers.py  urls.py  utils.py  video.py  views.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  deploy.py
backend/utils/: center.csv  center_uploader.py  crawl.py  learning_video.csv  learning_video_uploader.py  learning_word.csv  learning_word_uploader.py  quiz_description.csv  quiz_description_uploader.py  quiz_question.csv  quiz_question_uploader.py
config/: urls.py
(+82 files in other folders)
